Cleanup (minor optimization; formatting)
GitOrigin-RevId: 840307d03cd0f2b414741751f5fefd0f225342ef