@@ -1,26 +1,26 @@
 // Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.execution.configurations;
 
-import com.intellij.openapi.util.SystemInfo;
 import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.util.EnvironmentUtil;
 import com.intellij.util.SmartList;
 import com.intellij.util.containers.ContainerUtil;
-import org.jetbrains.annotations.*;
+import com.intellij.util.system.OS;
+import org.jetbrains.annotations.Contract;
+import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
+import org.jetbrains.annotations.Unmodifiable;
 
 import java.io.File;
 import java.io.FileFilter;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
 /**
  * A collection of utility methods for working with PATH environment variable.
  */
-@SuppressWarnings("ALL")
+@SuppressWarnings("IO_FILE_USAGE")
 public final class PathEnvironmentVariableUtil {
   private static final Map<String, Boolean> ourOnPathCache = Collections.synchronizedMap(new HashMap<>());
 
@@ -33,7 +33,7 @@ public final class PathEnvironmentVariableUtil {
    * @param fileBaseName file base name
    * @return {@link File} instance or null if not found
    */
-  public static @Nullable File findInPath(@NotNull @NonNls String fileBaseName) {
+  public static @Nullable File findInPath(@NotNull String fileBaseName) {
     return findInPath(fileBaseName, null);
   }
 
@@ -51,7 +51,7 @@ public final class PathEnvironmentVariableUtil {
 
   /**
    * Finds an executable file with the specified base name, that is located in a directory
-   * listed in the passed PATH environment variable value and is accepted by filter.
+   * listed in the given PATH environment variable value and is accepted by filter.
    *
    * @param fileBaseName      file base name
    * @param pathVariableValue value of PATH environment variable
@@ -59,8 +59,8 @@ public final class PathEnvironmentVariableUtil {
    * @return {@link File} instance or null if not found
    */
   public static @Nullable File findInPath(@NotNull String fileBaseName, @Nullable String pathVariableValue, @Nullable FileFilter filter) {
-    List<File> exeFiles = findExeFilesInPath(true, filter, pathVariableValue, fileBaseName);
-    return ContainerUtil.getFirstItem(exeFiles);
+    var exeFiles = findExeFilesInPath(true, filter, pathVariableValue, fileBaseName);
+    return !exeFiles.isEmpty() ? exeFiles.get(0) : null;
   }
 
   /**
@@ -78,20 +78,22 @@ public final class PathEnvironmentVariableUtil {
     return findExeFilesInPath(false, filter, getPathVariableValue(), fileBaseName);
   }
 
-  private static @NotNull List<File> findExeFilesInPath(boolean stopAfterFirstMatch,
-                                                        @Nullable FileFilter filter,
-                                                        @Nullable String pathEnvVarValue,
-                                                        String @NotNull ... fileBaseNames) {
+  private static @NotNull List<File> findExeFilesInPath(
+    boolean stopAfterFirstMatch,
+    @Nullable FileFilter filter,
+    @Nullable String pathEnvVarValue,
+    String @NotNull ... fileBaseNames
+  ) {
     if (pathEnvVarValue == null) {
-      return Collections.emptyList();
+      return List.of();
     }
-    List<File> result = new SmartList<>();
-    List<String> dirPaths = getPathDirs(pathEnvVarValue);
-    for (String dirPath : dirPaths) {
-      File dir = new File(dirPath);
+    var result = new SmartList<File>();
+    var dirPaths = getPathDirs(pathEnvVarValue);
+    for (var dirPath : dirPaths) {
+      var dir = new File(dirPath);
       if (dir.isAbsolute() && dir.isDirectory()) {
-        for (String fileBaseName : fileBaseNames) {
-          File exeFile = new File(dir, fileBaseName);
+        for (var fileBaseName : fileBaseNames) {
+          var exeFile = new File(dir, fileBaseName);
           if (exeFile.isFile() && exeFile.canExecute()) {
             if (filter == null || filter.accept(exeFile)) {
               result.add(exeFile);
@@ -111,32 +113,30 @@ public final class PathEnvironmentVariableUtil {
   }
 
   public static @NotNull @Unmodifiable List<String> getWindowsExecutableFileExtensions() {
-    if (SystemInfo.isWindows) {
-      String allExtensions = System.getenv("PATHEXT");
+    if (OS.CURRENT == OS.Windows) {
+      @SuppressWarnings("SpellCheckingInspection") var allExtensions = System.getenv("PATHEXT");
       if (allExtensions != null) {
-        List<? extends String> extensions = StringUtil.split(allExtensions, ";", true, true);
-        extensions = ContainerUtil.filter(extensions, s -> !StringUtil.isEmpty(s) && s.startsWith("."));
-        return ContainerUtil.map(extensions, s -> StringUtil.toLowerCase(s));
+        return StringUtil.split(allExtensions, ";", true, true).stream()
+          .filter(ext -> ext.startsWith("."))
+          .map(ext -> ext.toLowerCase(Locale.ROOT))
+          .toList();
       }
     }
-    return Collections.emptyList();
+    return List.of();
   }
 
-  public static @NotNull String findExecutableInWindowsPath(@NotNull String exePath) {
-    return findExecutableInWindowsPath(exePath, exePath);
+  public static @NotNull String findExecutableInWindowsPath(@NotNull String baseName) {
+    return findExecutableInWindowsPath(baseName, baseName);
   }
 
   @Contract("_, !null -> !null")
-  public static String findExecutableInWindowsPath(@NotNull String exePath, @Nullable String defaultPath) {
-    if (SystemInfo.isWindows) {
-      if (!StringUtil.containsChar(exePath, '/') && !StringUtil.containsChar(exePath, '\\')) {
-        List<String> executableFileExtensions = getWindowsExecutableFileExtensions();
-
-        String[] baseNames = ContainerUtil.map2Array(executableFileExtensions, String.class, s -> exePath + s);
-        List<File> exeFiles = findExeFilesInPath(true, null, getPathVariableValue(), baseNames);
-        File foundFile = ContainerUtil.getFirstItem(exeFiles);
-        if (foundFile != null) {
-          return foundFile.getAbsolutePath();
+  public static String findExecutableInWindowsPath(@NotNull String baseName, @Nullable String defaultPath) {
+    if (OS.CURRENT == OS.Windows) {
+      if (!StringUtil.containsChar(baseName, '/') && !StringUtil.containsChar(baseName, '\\')) {
+        var fileNames = ContainerUtil.map2Array(getWindowsExecutableFileExtensions(), String.class, ext -> baseName + ext);
+        var exeFiles = findExeFilesInPath(true, null, getPathVariableValue(), fileNames);
+        if (!exeFiles.isEmpty()) {
+          return exeFiles.get(0).getAbsolutePath();
         }
       }
     }
@@ -150,15 +150,14 @@ public final class PathEnvironmentVariableUtil {
     return EnvironmentUtil.getValue("PATH");
   }
 
-  public static @Nullable File findExecutableInPathOnAnyOS(@NotNull @NonNls String fileBaseName) {
-    if (SystemInfo.isWindows) {
-      String[] fileNames = ContainerUtil.map2Array(getWindowsExecutableFileExtensions(), String.class,
-                                                   (String extension) -> fileBaseName + extension);
-      List<File> exeFiles = findExeFilesInPath(true, null, getPathVariableValue(), fileNames);
-      return ContainerUtil.getFirstItem(exeFiles);
+  public static @Nullable File findExecutableInPathOnAnyOS(@NotNull String baseName) {
+    if (OS.CURRENT == OS.Windows) {
+      var fileNames = ContainerUtil.map2Array(getWindowsExecutableFileExtensions(), String.class, ext -> baseName + ext);
+      var exeFiles = findExeFilesInPath(true, null, getPathVariableValue(), fileNames);
+      return !exeFiles.isEmpty() ? exeFiles.get(0) : null;
     }
     else {
-      return findInPath(fileBaseName);
+      return findInPath(baseName);
     }
   }
 
